Make Vagrant file link go to the right target.  Updated domains.  TODO: get host and fqdn to work, or pass it in as facter override and ensure hostname module can configure it on the host

--- a/nodeLists/cluster.yaml
+++ b/nodeLists/cluster.yaml
@@ -1,5 +1,6 @@
 -
     hostname: 'app'
+    domain: 'example.com'
     ip: '192.168.88.1'
     imageType: 'centos64'
     ram: '1024'
@@ -10,6 +11,7 @@
             to: 8088
 -
     hostname: 'web'
+    domain: 'example.com'
     ip: '192.168.88.2'
     imageType: 'centos64'
     ram: '512'
