--- a/imageTypes.yaml
+++ b/imageTypes.yaml
@@ -3,7 +3,7 @@
 centos64:
     vagrantBox: Centos64
     vagrantUrl: http://developer.nrel.gov/downloads/vagrant-boxes/CentOS-6.4-x86_64-v20130427.box
-    amazonImage: ami-20397849
+    amazonImage: ami-2d662b44 # Note: This is an image created on aws-150-300, you may need to get access to this.
     rackspaceImage: TBD
 
 precise64:
