--- a/nodeLists/cluster.yaml
+++ b/nodeLists/cluster.yaml
@@ -4,7 +4,7 @@
     ip: '192.168.88.1'
     imageType: 'centos64'
     ram: '1024'
-    awsType: 'm1small'
+    awsType: 'm1.small'
     portmappings:
         -
             from: 8080
@@ -15,7 +15,7 @@
     ip: '192.168.88.2'
     imageType: 'centos64'
     ram: '512'
-    awsType: 't1micro'
+    awsType: 't1.micro'
     portmappings:
         -
             from: 80
