--- a/imageTypes.yaml
+++ b/imageTypes.yaml
@@ -3,12 +3,12 @@
 centos64:
     vagrantBox: Centos64
     vagrantUrl: http://developer.nrel.gov/downloads/vagrant-boxes/CentOS-6.4-x86_64-v20130427.box
-    amazonImage: ami-20397849
+    amazonImage: ami-2d662b44
     rackspaceImage: TBD
 
 precise64:
     vagrantBox: precise64
-    vagrantUrl: vagrantbox = 'http://puppet-vagrant-boxes.puppetlabs.com/ubuntu-server-12042-x64-vbox4210.box'
+    vagrantUrl: http://puppet-vagrant-boxes.puppetlabs.com/ubuntu-server-12042-x64-vbox4210.box
     amazonImage: TBD
     rackspaceImage: TBD
 
