--- a/nodeLists/dev.yaml
+++ b/nodeLists/dev.yaml
@@ -1,7 +1,7 @@
 -
     hostname: 'dev'
     domain: 'example.com'
-    ip: '192.168.88.1'
+    ip: '192.168.88.10'
     imageType: 'centos64'
     ram: '512'
-    awsType: 't1micro'
+    awsType: 't1.micro'
