Scope AMIs to an AWS region
Allow AMI identifiers to be specified on a per-region basis, so that if we wish to provision an instance in a new region, we only have to update the region, not the ami ID as well.

--- a/imageTypes.yaml
+++ b/imageTypes.yaml
@@ -4,6 +4,9 @@ centos64:
     vagrantBox: RightScaleCentOS
     vagrantUrl: https://rightscale-vagrant.s3.amazonaws.com/virtualbox/centos/6.4/RightImage_CentOS_6.4_x64_v13.5.0.1.box
     amazonImage: ami-d14c34b8
+    amazonImage: 
+      us-east-1: ami-d14c34b8
+      us-west-1: ami-82dcf4c7
     rackspaceImage: TBD
 
 precise64:
